--- a/Changes
+++ b/Changes
@@ -9,3 +9,6 @@ Revision history for Perl extension Net::Amazon::S3::Tools.
         - merged via hg with s3-tools v0.05
 	- license LGPLv2.1
 	- many doc fixes
+
+0.07  Mon Apr 28 14:28:14 PDT 2008
+	- remove dependecy on XML::Simple
